added star image, show each player's number of coins and stars under their name labels

--- a/gamestyle.css
+++ b/gamestyle.css
@@ -129,7 +129,12 @@ a{
     background-image: url("images/board/bottomleftcorner.jpg");
 }
 .bottomrightcorner{
-    background-image: url("images/board/bottomrightcorner.jpg") ;
+    background-image: url("images/board/bottomrightcorner.jpg");
+}
+
+
+.starSpace{
+    background-image: url("images/board/Star.jpg");
 }
 
 
